style to index and thegame change, some content added

--- a/index.html
+++ b/index.html
@@ -37,30 +37,39 @@
             </div>
         </section>
     </header>
-    <div class="container-fluid row">
+    <div class="container-fluid row index-container">
         <div class="col-md-6">
             <div>
-                <h1>Welcome to Zone031!</h1>
+                <h2>Welcome to Zone031!</h2>
                 <p>Zone031 is a laser tag club based in Gothenburg, Sweden. We actively work to promote laser tag as a sport 
-                and are always keen to recruit new members. 
+                and are always keen to recruit new members. Currently we have around 20 active members with more occassionals. 
+                We train regularly three times a week and our Thursday sessions are always open to those who find themselves
+                interested in seeing what playing laser tag in a more structured manner is about. <strong>Did we mention that your first
+                training session is entirely free of charge? So there is no reason to hesitate!</strong> Fill out the form below and you will 
+                receive invites to our regular thursday session. If you want to contact us with any questions beforehand, the easiest
+                way is to send a message to our facebook page linked below and someone will reply promptly! If you simply want to
+                see what we're about check out our twitch streams from our training sessions and our instagram account. 
                 </p>
             </div>
-            <div> 
-                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fab fa-facebook"></i><span>Follow us on Facebook!</span></a>
-                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fab fa-twitch"></i><span>Follow us on Twitch!</span></a>
-                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fab fa-instagram"></i><span>Follow us on Instagram!</span></a>
+            <div class="follow-icons"> 
+                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i><span>Follow us on Facebook!</span></a>
+                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fa fa-twitch"></i><span>Follow us on Twitch!</span></a>
+                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fa fa-instagram"></i><span>Follow us on Instagram!</span></a>
             </div>
         </div>
         <div class="col-md-6">
-            <iframe id="facebook-video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F689173604960777%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
+            <h3>Inside the Hisingen arena</h3>
+            <img src="assets/css/images/arena-hole.png" alt="" id="arena-image">
         </div>
         <div class="col-md-6 form-div">
                 <h3>Sign up for open training invitations every Thursday!</h3>
                 <div>
                     <p>
-                    Every thursday we host beginner-friendly training sessions at Laserdome Hisingen. This is a great opportunity to come 
-                    and find out what competetive lasertag is about and get introduced to lasertag as a sport. As this is a mixed training group
-                    you will encounter all levels of opposition while at the same time getting tips from some of the best lasertag players in Europe.
+                    Every thursday we host beginner-friendly training sessions at Laserdome Hisingen. First time is free!
+                    This is a great opportunity to come and find out what competetive lasertag is about and get 
+                    introduced to lasertag as a sport. As this is a mixed training group
+                    you will encounter all levels of opposition while at the same time getting tips 
+                    from some of the best lasertag players in Europe.
                     </p>
                     <form>
                         <div class="signup-form">
@@ -72,7 +81,8 @@
                 </div>
         </div>
         <div class="col-md-6">
-            <img src="assets/css/images/arena-hole.png" alt="" id="arena-image">
+            <h3>Baserun training!</h3>
+            <iframe id="facebook-video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F689173604960777%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
         </div>
     
     </div>
