--- a/media.html
+++ b/media.html
@@ -37,7 +37,7 @@
             <div class="col-md-4">
                 <h2>Twitch</h2> 
                     <p>See </p>
-                <iframe id="twitch-video-media" src="https://player.twitch.tv/?video=747031716" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                <iframe id="twitch-video-media" src="https://player.twitch.tv/?video=764363194&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
             </div>
             <div class="col-md-4">
              <h2>Facebook</h2>
