--- a/thegame.html
+++ b/thegame.html
@@ -33,7 +33,10 @@
             </div>
         </section>
     </header>
-   <section id="thegame">
+    <main id="thegame">
+   <section id="as-sport">
+    <div class="container-fluid row">
+    <div class="col-md-12">
         <h2>Lasertag as a sport</h2>
             <p>
                 Lasertag as a sport has been growing a lot in recent years and we keep adding new countries to the list of active participants
@@ -49,9 +52,12 @@
                 things that better players do in order to further enhance the game and grow the sport. You will meet an array of different player types 
                 as well as players with very different levels of experience. 
             </p>
+    </div>
+    </div>
    </section>
    <section class="game-formats">
         <h2>Game formats</h2>
+        <div class="container-fluid row">
         <div class="col-md-6">
             <h3>Team Competition</h3>
             <p>
@@ -84,15 +90,19 @@
                 are usually played as side events at major tournaments.
             </p>
         </div>
+        </div>
    </section>
     <section class="rules">
+        <div class="container-fluid row">
+        <div class="col-md-12">
         <h2>Rules</h2>
             <p>The complete rules span a lot of pages and really only makes complete sense for experienced players. 
             The following are a simplification of the rules to allow inexperienced players a rough guide and the curious
             a general idea of how competetive lasertag is played.
             </p>
+            </div>
             <div class="col-md-6">
-                <h4>No Running</h4>
+                <h3>No Running</h3>
                 <p>
                     You are not allowed to move with speed which exceeds your own control. As lasertag is played
                     in a dark arena with a lot of walls it is unsafe to move at really high speeds as you may easily
@@ -101,14 +111,14 @@
                 </p>
             </div>
             <div class="col-md-6">
-                <h4>No Jumping</h4>
+                <h3>No Jumping</h3>
                 <p>
                     You are not allowed to jump either as a way of avoiding shots or reaching over high walls. This is again for everybody's 
                     safety as you are not in complete control as you are in the air and easily may obstruct other players from moving freely.
                 </p>
             </div>
             <div class="col-md-6">
-                <h4>No Intentional Covering</h4>
+                <h3>No Intentional Covering</h3>
                 <p>
                     You are not allowed to use your arms, any other part of your body or any clothing or other things to cover part of your pack.
                     In order for lasertag to be a competetive sport, the packs need to be hitable while they are in play. It just makes the game
@@ -116,7 +126,7 @@
                 </p>
             </div>
             <div class="col-md-6">
-                <h4>Give Way to Active Players</h4>
+                <h3>Give Way to Active Players</h3>
                 <p>
                     Lasertag is a very active sport but players can either be active or inactive depending on the status of one's pack. As you are
                     waiting to be reactivated you need to make sure that you do not hinder an active player from progressing in the arena. Your time
@@ -124,14 +134,15 @@
                 </p>
             </div>
             <div class="col-md-6">
-                <h4>No Climbing or Otherwise Improper Use of Arena</h4>
+                <h3>No Climbing or Otherwise Improper Use of Arena</h3>
                 <p>
                     Do not climb on walls or boxes. Lasertag is played on the ground. Also do not pull at walls or misuse the arena in any other
                     obvious way. 
                 </p>
             </div>
-            
+            </div>
     </section>
+    </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
