fix twitch embed & add tournament content

--- a/tournaments.html
+++ b/tournaments.html
@@ -36,22 +36,63 @@
     <main>
     <h2>Tournaments hosted by Zone031</h2>
     <section>
-        <h3>Masters Meeting</h3>
-        <p>
-        Masters Meeting is an annual team competition quad tournament. The tournament has been around for two decades
-        and is together with The Gathering in Stockholm one of the two main open tournaments in Sweden. 
-        </p>
-        <iframe src="https://player.twitch.tv/?video=538676359&parent=https://marcusaureliuslinden.github.io/zone031-test/tournaments.html" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
-        <iframe src="https://player.twitch.tv/?video=538676359&parent=https://marcusaureliuslinden.github.io/zone031-test/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
-        <iframe src="https://player.twitch.tv/?video=538676359&parent=https://marcusaureliuslinden.github.io/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+        <div class="container-fluid row">
+            <div class="col-md-12">
+                <h3>Masters Meeting</h3>
+                <p>
+                Masters Meeting is an annual team competition quad tournament. The tournament has been around for two decades
+                and is together with The Gathering in Stockholm one of the two main open tournaments in Sweden. Outside of nationals
+                Masters Meeting is without a doubt one of the most prestigous tournaments around.  
+                </p>
+            </div>
+            <div class="col-md-12">
+                <h3>Masters Meeting 2020</h3>
+                <p>
+                Masters Meeting 2020 was the first Masters Meeting hosted at Laserdome Hisingen. The event saw 8 teams competing
+                in the two main events of Team Competition and Elimination and even more in the baserun event. Players from 
+                Sweden, Finland, Germany and France attended the event.
+                </p>
+            </div>
+            <div class="col-md-12">
+                <h3>Results <i class="fa fa-trophy" aria-hidden="true"></i></h3>
+            </div>
+            <div class="col-md-4">
+                <h4>Team Competition</h4>
+            </div>
+            <div class="col-md-4">
+                <h4>Team Elimination</h4>
+            </div>
+            <div class="col-md-4">
+                <h4>Baserun</h4>
+            </div>
+            <div class="col-md-12">
+                <h3>Videos</h3>
+            </div>
+            <div class="col-md-6">
+                <h4>Friday baserun whole event</h4>
+                <iframe src="https://player.twitch.tv/?video=537831964&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+            </div>
+            <div class="col-md-6">
+                <h4>Sunday elimination and team comp finals</h4>
+                <iframe src="https://player.twitch.tv/?video=538676359&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+            </div>
+        </div>
     </section>
     <section>
-        <h3>Double Trouble</h3>
-        <p>
-        Double trouble was a small tournament played in the summer of 2020. The tournament was played on four different doubles formats.
-        </p>
-        <iframe src="https://player.twitch.tv/?video=667798701&parent=www.gitpod.io/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
-
+    <div class="container-fluid row">
+        <div class="col-md-12">
+            <h3>Double Trouble</h3>
+            <p>
+            Double trouble was a small tournament played in the summer of 2020. The tournament was played on four different doubles formats.
+            </p>
+        </div>
+        <div class="col-md-6">
+            <iframe src="https://player.twitch.tv/?video=667798701&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+        </div>
+        <div class="col-md-6">
+            <iframe src="https://player.twitch.tv/?video=667799060&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+        </div>
+    </div>
     </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
