--- a/media.html
+++ b/media.html
@@ -36,8 +36,8 @@
     <div class="container-fluid row">
             <div class="col-md-4">
                 <h2>Twitch</h2> 
-                    <p>See </p>
-                <iframe id="twitch-video-media" src="https://player.twitch.tv/?video=764363194&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                    <p>Regular live streams from our training sessions see more at our <a class="hyperlink" href="https://www.twitch.tv/lasertaggothenburg">Twitch account</a></p>
+                <iframe id="twitch-video-media" src="https://player.twitch.tv/?video=764363194&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" autoplay="false" scrolling="no" height="378" width="620"></iframe>
             </div>
             <div class="col-md-4">
              <h2>Facebook</h2>
