--- a/tournaments.html
+++ b/tournaments.html
@@ -70,11 +70,11 @@
             </div>
             <div class="col-md-6">
                 <h4>Friday baserun whole event</h4>
-                <iframe src="https://player.twitch.tv/?video=537831964&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                <iframe src="https://player.twitch.tv/?video=537831964&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
             </div>
             <div class="col-md-6">
                 <h4>Sunday elimination and team comp finals</h4>
-                <iframe src="https://player.twitch.tv/?video=538676359&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                <iframe src="https://player.twitch.tv/?video=538676359&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
             </div>
         </div>
     </section>
@@ -87,10 +87,10 @@
             </p>
         </div>
         <div class="col-md-6">
-            <iframe src="https://player.twitch.tv/?video=667798701&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+            <iframe src="https://player.twitch.tv/?video=667798701&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
         </div>
         <div class="col-md-6">
-            <iframe src="https://player.twitch.tv/?video=667799060&parent=marcusaureliuslinden.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+            <iframe src="https://player.twitch.tv/?video=667799060&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
         </div>
     </div>
     </section>
