--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <div class="col-md-6">
             <h3>Baserun training!</h3>
-            <iframe id="facebook-video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F689173604960777%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
+            <iframe class="embed-video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F689173604960777%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
         </div>
     
     </div>
