css update issues, push to reboot to see changes

--- a/tournaments.html
+++ b/tournaments.html
@@ -54,27 +54,42 @@
                 </p>
             </div>
             <div class="col-md-12">
-                <h3>Results <i class="fa fa-trophy" aria-hidden="true"></i></h3>
+                <h3>Results <i class="fa fa-trophy" aria-hidden="true"></i><i class="fa fa-instagram"></i></h3>
             </div>
             <div class="col-md-4">
                 <h4>Team Competition</h4>
+                <ul class="MM20-winners">
+                 <li><span>1st</span> - Whats your excuse? (Detum, Xyltiol, Quutamo & dlsember)</li>
+                 <li><span>2nd</span> - Feydakin (Mumin, Smiley, Bambi & Slaanesh)</li>
+                 <li><span>3rd</span> - Jännäkakka (Darkomen, Musti, Milkka & Hacker)</li>
+                </ul>
             </div>
             <div class="col-md-4">
                 <h4>Team Elimination</h4>
+                <ul class="MM20-winners">
+                 <li><span>1st</span> - Whats your excuse? (Detum, Xyltiol, Quutamo & dlsember)</li>
+                 <li><span>2nd</span> - Feydakin (Mumin, Smiley, Bambi & Slaanesh)</li>
+                 <li><span>3rd</span> - Jännäkakka (Darkomen, Musti, Milkka & Hacker)</li>
+                </ul>
             </div>
             <div class="col-md-4">
                 <h4>Baserun</h4>
+                <ul class="MM20-winners">
+                 <li><span>1st</span> - Mumin, Smiley & Bambi</li>
+                 <li><span>2nd</span> - Detum, Xylitol & Quutamo</li>
+                 <li><span>3rd</span> - Darkomen, Musti, Milkka & Hacker</li>
+                </ul>
             </div>
             <div class="col-md-12">
                 <h3>Videos</h3>
             </div>
             <div class="col-md-6">
                 <h4>Friday baserun whole event</h4>
-                <iframe src="https://player.twitch.tv/?video=537831964&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                <iframe class="embed-video" src="https://player.twitch.tv/?video=537831964&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
             </div>
             <div class="col-md-6">
                 <h4>Sunday elimination and team comp finals</h4>
-                <iframe src="https://player.twitch.tv/?video=538676359&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                <iframe class="embed-video" src="https://player.twitch.tv/?video=538676359&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
             </div>
         </div>
     </section>
@@ -84,13 +99,16 @@
             <h3>Double Trouble</h3>
             <p>
             Double trouble was a small tournament played in the summer of 2020. The tournament was played on four different doubles formats.
+            Smiley & Slaanesh were the winners of the tournament, Gottemaja & Mumin placed second and Bambi & Paulina third. 
             </p>
         </div>
         <div class="col-md-6">
-            <iframe src="https://player.twitch.tv/?video=667798701&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+            <h4>Day 1 of tournament</h4>
+            <iframe class="embed-video" src="https://player.twitch.tv/?video=667798701&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
         </div>
         <div class="col-md-6">
-            <iframe src="https://player.twitch.tv/?video=667799060&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+            <h4>Day 2 of tournament</h4>
+            <iframe class="embed-video" src="https://player.twitch.tv/?video=667799060&parent=marcusaureliuslinden.github.io" autoplay="false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
         </div>
     </div>
     </section>
