--- a/aboutus.html
+++ b/aboutus.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Marcus Linden">
+    <meta name="description" content="zone031">
+    <meta name="keywords" content="lasertag, laser tag, gothenburg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>About Us</title>
 </head>
 <body>
     <header>
@@ -39,7 +43,7 @@
         regular training activities on Tuesdays, Thursdays and Sundays starting from 18:45. We have decades and decades of 
         lasertag experience put together and are dedicated to introducing the sport to new players. If you are interested in
         trying out competetive laser tag, do not hesitate to contact us. The easiest way to do that is to send us a message
-        on <a href="https://www.facebook.com/Zone031" target="_blank">facebook!</a>  
+        on <a href="https://www.facebook.com/Zone031" target="_blank" class="hyperlink">facebook!</a>  
         </p>
         <h3>Current committee</h3>
         <div class="row row-cols-1 row-cols-md-3"> 
