--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="jquery.fancybox.min.css">
+    <title>Zone031</title>
 </head>
 <body>
     <header>
@@ -53,13 +54,23 @@
             </div>
             <div class="follow-icons"> 
                 <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i><span>Follow us on Facebook!</span></a>
-                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fa fa-twitch"></i><span>Follow us on Twitch!</span></a>
-                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fa fa-instagram"></i><span>Follow us on Instagram!</span></a>
+                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fa fa-twitch" aria-hidden="true"></i><span>Follow us on Twitch!</span></a>
+                <a href="https://www.facebook.com/Zone031/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>Follow us on Instagram!</span></a>
             </div>
         </div>
         <div class="col-md-6">
             <h3>Inside the Hisingen arena</h3>
-            <img src="assets/css/images/arena-hole.png" alt="" id="arena-image">
+            <p class="imglist">
+            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
+            <img src="assets/css/images/arena-hole_tn.jpg">
+            </a>
+            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
+            <img src="assets/css/images/arena-hole_tn.jpg">
+            </a>
+            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
+            <img src="assets/css/images/arena-hole_tn.jpg">
+            </a>
+            </p>
         </div>
         <div class="col-md-6 form-div">
                 <h3>Sign up for open training invitations every Thursday!</h3>
@@ -89,5 +100,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="jquery.fancybox.min.js"></script>
 </body>
 </html>
