fey page style change, front page carousel add, hover on nav&links fixed

--- a/feydakin.html
+++ b/feydakin.html
@@ -37,9 +37,11 @@
             </div>
         </section>
     </header>
-    <main  id="feydakin-main">
+    <main id="feydakin-main">
         <section>
-            <h2>Feydakin</h2>
+            <div class="container-fluid row">
+            <div class="col-md-3"> <img id="feydakin-logo" src="assets/css/images/feydakin.jpg" alt="feydakin logo"> </div>
+            <div class="col-md-9 fey-intro">
                 <p>
                 The mythos of the Feydakin players is as dark as the arena during power failure. The earthly counterpart to 
                 the death commandos Fedaykin of Arrakis, Feydakin excel at splitting defences, destroying bases and eliminating 
@@ -49,6 +51,12 @@
                 Feydakin boasts almost a century of collective player experience. As well as being some of the best players in the world,
                 every Feydakin player is also an innovator having honed and developed a unique playstyle from scratch.
                 </p>
+                <p>
+                Over the years Feydakin have seen many players enter their ranks but few remain. Today there is a steady core of 
+                experienced players that have been around for decades with some fresh young(er) blood mixed in. 
+                </p>
+            </div>
+            </div>
         </section>
 
         <section>
@@ -59,7 +67,10 @@
                             <img src="assets/css/images/mumin.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Mumin (C)</div>
-                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                                <div class="card-text">If you get too close you are probably done for, on the other hand,
+                                if you try to stay away you will soon find your escape route cut off. You may as well try
+                                and die.
+                                </div>
                             </div>
                         </div>  
                     </div>
@@ -68,7 +79,10 @@
                             <img src="assets/css/images/bambi.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Bambi</div>
-                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                                <div class="card-text">He will find you, he will chase you and he will kill you. If you
+                                think that he is too busy and that you will be able to get away you are mistaken. Did we mention
+                                that he will chase you down?
+                                </div>
                             </div>
                         </div>  
                     </div>
@@ -77,7 +91,10 @@
                             <img src="assets/css/images/smiley.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Smiley</div>
-                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                                <div class="card-text">
+                                As rarely captured on photographs as he is seen inside of the arena. If you died and you don't know
+                                from where it was Smiley. He is tracking you and your friends.
+                                </div>
                             </div>
                         </div>  
                     </div>
@@ -86,7 +103,9 @@
                             <img src="assets/css/images/jag.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Gottemaja</div>
-                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                                <div class="card-text">Too skinny to dodge he will disappear behind a wall and reappear where you
+                                least expect it. Sometimes so many steps ahead he will confuse himself, but not more than he will confuse you.
+                                </div>
                             </div>
                         </div>  
                     </div>
@@ -95,7 +114,9 @@
                             <img src="assets/css/images/slaanesh.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Slaanesh</div>
-                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                                <div class="card-text">The closer you get to him the more he likes it. If you think you got him, you don't.
+                                No one else can move so much weight so fast.
+                                </div>
                             </div>
                         </div>  
                     </div>
@@ -104,7 +125,8 @@
                             <img src="assets/css/images/supair.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Supair</div>
-                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                                <div class="card-text">The most unpredictable player in Feydakin's history. When he is in the right mood
+                                he will tear through anything.</div>
                             </div>
                         </div>  
                     </div>
@@ -113,7 +135,9 @@
                             <img src="assets/css/images/felix.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <div class="card-title fey-plname">Jae Hong</div>
-                                <div class="card-text">The mythos of the Feydakin players is as dark as the arena during power failure</div>
+                                <div class="card-text">The way he spins his weapon is so smooth you'd think his wrists can turn 360
+                                degrees. Waits for you to make a mistake and doesn't hesitate to make the most of any opportunity.
+                                </div>
                             </div>
                         </div>  
                     </div>
@@ -123,7 +147,7 @@
                             <div class="card-body">
                                 <div class="card-title fey-plname">Skipp</div>
                                 <div class="card-text">He claimed to have retired from lasertag, still he suddenly reappears in the dark 
-                                when the stars align to create havoc in your defence. 
+                                to create havoc in your defence. 
                                 </div>
                             </div>
                         </div>  
@@ -137,6 +161,9 @@
              </p>
         </section>
     </main>
+    <footer>
+        <p><span>Photo by <a href="https://unsplash.com/@jeremybishop?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jeremy Bishop</a> on <a href="https://unsplash.com/s/photos/sand-dune?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
+    </footer>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
