--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="jquery.fancybox.min.css">
+    <link type="text/css" rel="stylesheet" href="assets/magicscrolls/magicscroll-trial/magicscroll/magicscroll.css"/>
     <title>Zone031</title>
 </head>
 <body>
@@ -60,7 +61,7 @@
         </div>
         <div class="col-md-6">
             <h3>Inside the Hisingen arena</h3>
-            <p class="imglist">
+            <!-- do not <p class="imglist">
             <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
             <img src="assets/css/images/arena-hole_tn.jpg">
             </a>
@@ -70,7 +71,24 @@
             <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
             <img src="assets/css/images/arena-hole_tn.jpg">
             </a>
-            </p>
+            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
+            <img src="assets/css/images/arena-hole_tn.jpg">
+            </a>
+            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
+            <img src="assets/css/images/arena-hole_tn.jpg">
+            </a>
+            <a href="assets/css/images/arena-hole.png" data-fancybox data-caption="Caption for single image">
+            <img src="assets/css/images/arena-hole_tn.jpg">
+            </a>
+            </p> -->
+            <div class="MagicScroll" data-options="mode: carousel; height: 350px;">
+                <img src="assets/css/images/arena-hole.png" />
+                <img src="assets/css/images/arena-hole.png" />
+                <img src="assets/css/images/arena-hole.png" />
+                <img src="assets/css/images/arena-hole.png" />
+                <img src="assets/css/images/arena-hole.png" />
+                <img src="assets/css/images/arena-hole.png" />
+            </div>
         </div>
         <div class="col-md-6 form-div">
                 <h3>Sign up for open training invitations every Thursday!</h3>
@@ -102,5 +120,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="jquery.fancybox.min.js"></script>
+    <script type="text/javascript" src="assets/magicscrolls/magicscroll-trial/magicscroll/magicscroll.js"></script>
 </body>
 </html>
