--- a/media.html
+++ b/media.html
@@ -46,7 +46,7 @@
             <div class="col-md-6">
              <h2>Facebook</h2>
              <p>On occassion we livestream via mobile phones directly from inside of the arena. These films are the most intimate laser tag experience
-             you can get without actually being inside the arena. 
+             you can get without actually being inside the arena. You can find all of these videos on our <a class="hyperlink" href="https://www.facebook.com/Zone031/videos/?ref=page_internal">facebook page</a>
              </p>
                 <iframe id="facebook-media" src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F255647752334203%2F&show_text=false&width=560" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allow="encrypted-media" allowfullscreen="true"></iframe>
             </div>
